--- a/components/MainSearch/mainSearch.module.css
+++ b/components/MainSearch/mainSearch.module.css
@@ -23,20 +23,32 @@
   align-items: center;
   justify-content: center;
 }
+.center2 {
+  display: grid;
+}
 
 .suggestionsContainer {
-  position: absolute;
-  display: grid;
-  grid-template-columns: 250px;
-  /* transform: translateY(70px); */
+  width: 500px;
+  transform: translate(200px, -780px);
+  max-height: 600px;
+  overflow-y: scroll;
 }
 
 .suggestionItem {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(112, 112, 112);
   color: white;
   border: solid rgba(197, 197, 197, 0.403) 1px;
   padding: 4px;
   cursor: pointer;
+  height: 40px;
+  font-size: 1em;
+  max-width: 500px;
+  min-width: 500px;
+}
+
+.suggestionItem :hover {
+  background-color: black;
+  color: red;
 }
 .cardContainer {
   grid-area: cardContainer;
