--- a/components/HistoryTab/historyTab.module.css
+++ b/components/HistoryTab/historyTab.module.css
@@ -12,10 +12,10 @@
   display: none;
 }
 .historyContainer {
-  background-color: rgb(223, 228, 163);
   display: grid;
   grid-template-columns: repeat(10, minmax(10px, max-content));
   grid-template-rows: repeat(auto-fit, minmax(10px, max-content));
+  overflow: hidden;
 }
 .smallImage:hover + .hoverImage {
   display: block;
