--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 html,
 body {
+  background-color: rgb(65, 65, 65);
+  color: white;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
