added selection to make it clear what tab your on

--- a/components/SideDisplay/SideDisplay.module.css
+++ b/components/SideDisplay/SideDisplay.module.css
@@ -23,6 +23,9 @@
   background-color: cornflowerblue;
   margin: 5px;
 }
+.notSelectedTab {
+  background-color: grey;
+}
 .historyTab {
   height: 100%;
 }
