--- a/components/CommanderTab/commanderTab.module.css
+++ b/components/CommanderTab/commanderTab.module.css
@@ -7,3 +7,16 @@
 .playerName {
   cursor: pointer;
 }
+.button {
+  background-color: black;
+  border-radius: 10px;
+  color: white;
+  border: none;
+  margin-right: 20px;
+  padding: 10px;
+  outline: none;
+}
+.button:active {
+  background-color: white;
+  color: black;
+}
